--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
 <meta charset="utf-8">
+<link rel="stylesheet" href="index.css">
 <title>Odin Recipe</title>
     </head>
 
@@ -10,9 +11,9 @@
         <br>
         <h2>Hot Recipes Right Now:</h2>
         <ol>
-            <li><a href="recipes/eggplant.html">Stuffed Eggplant</a></li>
-            <li><a href="recipes/croissants.html">Lemon Cheesecake Creme Brulee Croissants</a></li>
-            <li><a href="recipes/muffins.html">Blueberry Muffins</a></li>
+            <li class="list1"><a href="recipes/eggplant.html">Stuffed Eggplant</a></li>
+            <li class="list2"><a href="recipes/croissants.html">Lemon Cheesecake Creme Brulee Croissants</a></li>
+            <li class="list3"><a href="recipes/muffins.html">Blueberry Muffins</a></li>
         </ol>
         
     </body>
