update index.css croissant.html eggplant.html muffins.html

--- a/recipes/muffins.html
+++ b/recipes/muffins.html
@@ -2,30 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../index.css">
     <title>Muffins Recipe</title>
 </head>
 <body>
-   <img src="../images/muffins.jpg" height="460" width="450" alt="Blueberry Muffins">
-   <h1><strong>Blueberry Muffins</strong></h1>
-   <p>This blueberry muffin recipe makes eight extra large and yummy breakfast muffins with a sugary-cinnamon crumb topping. I usually double the recipe and fill the muffin cups just to the top for a wonderful, extra-generously-sized, deli-style muffin. Add extra blueberries if you want!</p>
-   <br>
-   <h2>Blueberry Muffin Incredients</h2>
-   <p>These are the ingredients you’ll need to make this blueberry muffins recipe at home:</p>
-   <ul>
-    <li><strong>For the muffins</strong>:all-purpose flour, white sugar, baking powder, salt, vegetable oil, an egg, milk, and fresh blueberries </li>
-    <li><strong>For the topping</strong>:white sugar, all-purpose flour, butter, and cinnamon </li>
-   </ul>
-   <br>
-   <h2>How to Make Stuffed Eggplant</h2>
-   <p>You’ll find the full, step-by-step recipe below: </p>
-   <ol>
-    <li>Mix the dry ingredients in a bowl.</li>
-    <li>Mix the wet ingredients in a liquid measuring cup.</li>
-    <li>Add the wet mixture to the dry mixture, then fold in the blueberries.</li>
-    <li>Make the topping. </li>
-    <li>Pour the batter into a prepared muffin tin and sprinkle with the topping. </li>
-    <li>Bake in the preheated oven until the toothpick comes out clean.</li>
-   </ol>
-   
+    <div class="heading">
+        Blueberry Muffins
+    </div>
+    <div class="recipe-image">
+    <img src="../images/muffins.jpg" height=auto width="620" alt="Blueberry Muffins">
+    </div>
+    <div class="recipe-content">
+        <p>This blueberry muffin recipe makes eight extra large and yummy breakfast muffins with a sugary-cinnamon crumb topping. I usually double the recipe and fill the muffin cups just to the top for a wonderful, extra-generously-sized, deli-style muffin. Add extra blueberries if you want!</p>
+        <br>
+        <h2>Blueberry Muffin Incredients</h2>
+        <p>These are the ingredients you’ll need to make this blueberry muffins recipe at home:</p>
+        <ul>
+         <li><strong>For the muffins</strong>:all-purpose flour, white sugar, baking powder, salt, vegetable oil, an egg, milk, and fresh blueberries </li>
+         <li><strong>For the topping</strong>:white sugar, all-purpose flour, butter, and cinnamon </li>
+        </ul>
+        <br>
+        <h2>How to Make Blueberry Muffin</h2>
+        <p>You’ll find the full, step-by-step recipe below: </p>
+        <ol>
+         <li>Mix the dry ingredients in a bowl.</li>
+         <li>Mix the wet ingredients in a liquid measuring cup.</li>
+         <li>Add the wet mixture to the dry mixture, then fold in the blueberries.</li>
+         <li>Make the topping. </li>
+         <li>Pour the batter into a prepared muffin tin and sprinkle with the topping. </li>
+         <li>Bake in the preheated oven until the toothpick comes out clean.</li>
+        </ol>
+    </div>
+    <footer>
+        Copyright @ Muhamed Razik 2024
+    </footer>
 </body>
 </html>
