update croissant.html eggplant.html muffins.html

--- a/recipes/croissants.html
+++ b/recipes/croissants.html
@@ -16,7 +16,7 @@
         <p>These lemon cheesecake creme brulee croissants are filled with a mixture of lemon curd and no-bake lemon cheesecake filling, then glazed with caramelized sugar syrup for that creme brulee crunch.</p>
         <br>
         <h2>Lemon Cheesecake Creme Brulee Croissants Incredients</h2>
-        <p>These are the ingredients you’ll need to make this restaurant-worthy Lemon Cheesecake Creme Brulee Croissants recipe at home:</p>
+        <p>These are the ingredients you will need to make this restaurant-worthy Lemon Cheesecake Creme Brulee Croissants recipe at home:</p>
         <ul>
          <li>6 large croissants</li>
          <li>1 cup cheesecake filling, such as Philadelphia® Cheesecake No-Bake </li>
