--- a/recipes/muffins.html
+++ b/recipes/muffins.html
@@ -23,7 +23,7 @@
         </ul>
         <br>
         <h2>How to Make Blueberry Muffin</h2>
-        <p>You’ll find the full, step-by-step recipe below: </p>
+        <p>You will find the full, step-by-step recipe below: </p>
         <ol>
          <li>Mix the dry ingredients in a bowl.</li>
          <li>Mix the wet ingredients in a liquid measuring cup.</li>
