--- a/recipes/eggplant.html
+++ b/recipes/eggplant.html
@@ -29,7 +29,7 @@
         </ul>
         <br>
         <h2>How to Make Stuffed Eggplant</h2>
-        <p>You’ll find the full, step-by-step recipe below – but here’s a brief overview of what you can expect when you make stuffed eggplant: </p>
+        <p>You will find the full, step-by-step recipe below – but here’s a brief overview of what you can expect when you make stuffed eggplant: </p>
         <ol>
          <li>Scoop out the flesh, brush the shells with oil, and season.</li>
          <li>Chop the reserved eggplant flesh into bite-sized pieces.</li>
