Rename croissant.html to omplette.html and redesign the page layout

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="container">
                 
                 <div class="croissants">
-                    <a href="recipes/croissants.html"><img src="images/croissants.webp" alt="croissants image" width="300px"></a>
+                    <a href="recipes/omplette.html"><img src="images/image-omelette.jpeg" alt="omplette image" width="300px"></a>
                     <p>-Lemon Cheesecake Creme Brulee Croissants-</p>
                 </div>
                 <div class="eggplant">
