made the recipe page responsive in small screen

--- a/recipes/omplette.html
+++ b/recipes/omplette.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./recipes.css">
-    <title>Croissants Recipe</title>
+    <title>Omplette</title>
 </head>
 
 <body>
@@ -94,7 +94,7 @@
         </section>
     </main>
     <footer>
-        Copyright @ Muhamed Razik 2024
+       By Muhamed Razik 😉 | Redesigned in  2025
     </footer>
 </body>
 
