Created croissant.html, started landing page redesign, and added initial content

--- a/recipes/eggplant.html
+++ b/recipes/eggplant.html
@@ -1,45 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../index.css">
-    <title>Eggplant Recipe</title>
+    <link rel="stylesheet" href="./recipes.css">
+    <title>Roasted Eggplant</title>
 </head>
+
 <body>
-    <div class="heading">
-        Stuffed Eggplant
-    </div>
-    <div class="recipe-image">
-    <img src="../images/eggplant.webp" height=auto width="620" alt="Stuffed Eggplant">
-    </div>
-    <div class="recipe-content">
-        <p>This delicious stuffed eggplant with a cheesy top is a must-try recipe! Great as a hearty main but you can buy the mini eggplants and use them for a side dish or appetizer.</p>
-        <br>
-        <h2>Stuffed Eggplant Incredients</h2>
-        <p>These are the ingredients you’ll need to make this restaurant-worthy stuffed eggplant recipe at home:</p>
-        <ul>
-         <li><strong>Eggplant</strong>: You’ll need one eggplant (halved lengthwise) to make two servings. </li>
-         <li><strong>Olive oil</strong>:  Brush the shells with olive oil before seasoning with salt and pepper. </li>
-         <li><strong>Seasonings</strong>:  This stuffed eggplant is seasoned with salt, pepper, fresh garlic, and fresh basil. </li>
-         <li><strong>Sausage</strong>:   Sweet Italian sausage makes this stuffed eggplant a hearty, crowd-pleasing meal. </li>
-         <li><strong>Vegetable</strong>:  An onion and fresh mushrooms lend texture and flavor. </li>
-         <li><strong>Pasta Sauce</strong>:  Use store-bought or homemade tomato-basil pasta sauce. </li>
-         <li><strong>Bread Crumbs</strong>:  Italian-seasoned panko bread crumbs give the stuffed eggplant a welcome crunch.  </li>
-         <li><strong>Cheese</strong>:  For the most delicious results, grate your own Parmesan cheese instead of using the pre-shredded stuff.  </li>
-        </ul>
-        <br>
-        <h2>How to Make Stuffed Eggplant</h2>
-        <p>You will find the full, step-by-step recipe below – but here’s a brief overview of what you can expect when you make stuffed eggplant: </p>
-        <ol>
-         <li>Scoop out the flesh, brush the shells with oil, and season.</li>
-         <li>Chop the reserved eggplant flesh into bite-sized pieces.</li>
-         <li>Cook sausage, vegetables, and garlic in the remaining oil.</li>
-         <li>Stir in the reserved eggplant, basil, and sauce. Mix in some of the panko and cheese. </li>
-         <li>Stuff the shells and sprinkle the remaining cheese and panko over the top. </li>
-        </ol>
-   </div>
-   <footer>
-    Copyright @ Muhamed Razik 2024
-</footer>
+    <main>
+        <section class="recipe-image">
+            <img src="../images/eggplant.webp" alt="Roasted Eggplant image">
+        </section>
+        <h1 class="heading">
+            Simple Roasted Eggplant Recipe
+        </h1>
+        <p>An easy, flavorful dish that makes a perfect side or main. This roasted eggplant is tender on the inside,
+            slightly crisp on the outside, and packed with savory umami flavor. Great on its own or served with rice,
+            bread, or yogurt dip.</p>
+        <section class="preperation">
+            <h2>Preparation time</h2>
+            <ul>
+                <li><span>Total :</span> Approximately 40 minutes</li>
+                <li><span>Preperation : </span> 10 minutes</li>
+                <li><span>Cooking : </span>30 minutes</li>
+            </ul>
+        </section>
+        <section class="ingredients">
+            <h2>Ingredients</h2>
+            <ul>
+                <li>1 large eggplant (or 2 medium-sized)</li>
+                <li>2 tablespoons olive oil</li>
+                <li>1 teaspoon garlic powder</li>
+                <li>½ teaspoon salt</li>
+                <li>¼ teaspoon black pepper</li>
+                <li>½ teaspoon smoked paprika (optional)</li>
+                <li>Fresh herbs (parsley or mint) for garnish</li>
+            </ul>
+        </section>
+        <section class="instructions">
+            <h2>Instructions</h2>
+            <ol>
+                <li>
+                    <span>Preheat the oven:</span>
+                    Set your oven to 200°C (400°F).
+                </li>
+                <li>
+                    <span>Prepare the eggplant:</span>
+                   Wash and cut the eggplant into 1-inch cubes or rounds. Place them in a bowl.
+                </li>
+                <li>
+                    <span>Season:</span>
+                    Drizzle olive oil over the eggplant. Add garlic powder, salt, pepper, and paprika. Toss to coat evenly.
+                </li>
+                <li>
+                    <span>Bake</span>
+                    Spread the seasoned eggplant on a lined baking tray in a single layer.
+                </li>
+                <li>
+                    <span>Roast:</span>
+                    Bake for about 25–30 minutes, flipping halfway, until golden brown and soft.
+                </li>
+                <li>
+                    <span>Serve:</span>
+                    Garnish with fresh herbs and serve hot or warm.
+                </li>
+            </ol>
+        </section>
+        <section class="nutrition">
+            <h2>Nutrition</h2>
+            <p>The table below shows nutritional values per serving without the additional fillings.</p>
+            <table>
+                <tbody>
+                    <tr>
+                        <th>Calories</th>
+                        <td>110kcal</td>
+                    </tr>
+                    <tr>
+                        <th>Carbs</th>
+                        <td>10g</td>
+                    </tr>
+                    <tr>
+                        <th>Protein</th>
+                        <td>1g</td>
+                    </tr>
+                    <tr>
+                        <th>Fat</th>
+                        <td>8g</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </main>
+    <footer>
+        By Muhamed Razik 😉 | Redesigned in 2025
+    </footer>
 </body>
+
 </html>
