--- a/recipes/omlette.html
+++ b/recipes/omlette.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./recipes.css">
-    <title>Omplette</title>
+    <title>Omlette</title>
 </head>
 
 <body>
     <main>
         <section class="recipe-image">
-            <img src="../images/image-omelette.jpeg" height=auto width="620" alt="simple omplete image">
+            <img src="../images/image-omelette.jpeg" alt="simple omplete with garnished image">
         </section>
         <h1 class="heading">
             Simple Omlette Recipe
@@ -35,7 +35,7 @@
                 <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
             </ul>
         </section>
-        <section class="insturctions">
+        <section class="instructions">
             <h2>Instructions</h2>
             <ol>
                 <li>
