--- a/index.html
+++ b/index.html
@@ -1,40 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-<meta charset="utf-8">
-<link rel="stylesheet" href="index.css">
-<title>Odin Recipe</title>
-    </head>
 
-    <body>
-        <div class="heading">
-            Odin Recipes
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Odin's Recipe</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li>Odin's recipes</li>
+                <li>Home</li>
+                <li>Recipes</li>
+                <li>About</li>
+            </ul>
+        </nav>
+        <div>
+            <h1>Simple, Delicious, Homemade</h1>
         </div>
-        <div class="main">
-            <div class="contents">
-                <div class="text">----------Recipes To Try----------</div>
-            </div>
-            <div class="container">
-                
-                <div class="croissants">
-                    <a href="recipes/omplette.html"><img src="images/image-omelette.jpeg" alt="omplette image" width="300px"></a>
-                    <p>-Lemon Cheesecake Creme Brulee Croissants-</p>
+    </header>
+    <main>
+
+        <section class="recipe-card">
+            <a href="./recipes/omlette.html">
+                <div class="recipe-image">
+                    <img src="./images/image-omelette.jpeg" alt="simple omplete with garnished image">
                 </div>
-                <div class="eggplant">
-                    <a href="recipes/eggplant.html"><img src="images/eggplant.webp" alt="eggplant image" width="300px"></a>
-                    <p>-Stuffed Eggplant-</p>
+                <h2>Simple Omlette Recipe</h2>
+                <p>Tasty And simple omlette to satisfy your small hunger</p>
+            </a>
+        </section>
+        <section class="recipe-card">
+            <a href="./recipes/omlette.html">
+                <div class="recipe-image">
+                    <img src="./images/croissants.jpg" alt="simple omplete with garnished image">
                 </div>
-                <div class="muffins">
-                    <a href="recipes/muffins.html"> <img src="images/muffins.jpg" alt="mufins image" width="300px"></a>
-                    <p>-Blueberry Muffins-</p>
+                <h2>Simple Omlette Recipe</h2>
+                <p>Tasty And simple omlette to satisfy your small hunger</p>
+            </a>
+        </section>
+        <section class="recipe-card">
+            <a href="./recipes/omlette.html">
+                <div class="recipe-image">
+                    <img src="./images/eggplant.webp" alt="simple omplete with garnished image">
                 </div>
-            </div>
-            <div class="contents">
-                <div class="text">---------Recipes To Try---------</div>
-            </div>
-        </div>
-        <footer>
-            Copyright @ Muhamed Razik 2024
-        </footer> 
-    </body>
+                <h2>Simple Omlette Recipe</h2>
+                <p>Tasty And simple omlette to satisfy your small hunger</p>
+            </a>
+        </section>
+        <section class="recipe-card">
+            <a href="./recipes/omlette.html">
+                <div class="recipe-image">
+                    <img src="./images/muffins.jpg" alt="simple omplete with garnished image">
+                </div>
+                <h2>Simple Omlette Recipe</h2>
+                <p>Tasty And simple omlette to satisfy your small hunger</p>
+            </a>
+        </section>
+    </main>
+
+</body>
+
 </html>
