--- a/recipes/muffins.html
+++ b/recipes/muffins.html
@@ -1,40 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../index.css">
-    <title>Muffins Recipe</title>
+    <link rel="stylesheet" href="./recipes.css">
+    <title>Blueberry Muffin</title>
 </head>
+
 <body>
-    <div class="heading">
-        Blueberry Muffins
-    </div>
-    <div class="recipe-image">
-    <img src="../images/muffins.jpg" height=auto width="620" alt="Blueberry Muffins">
-    </div>
-    <div class="recipe-content">
-        <p>This blueberry muffin recipe makes eight extra large and yummy breakfast muffins with a sugary-cinnamon crumb topping. I usually double the recipe and fill the muffin cups just to the top for a wonderful, extra-generously-sized, deli-style muffin. Add extra blueberries if you want!</p>
-        <br>
-        <h2>Blueberry Muffin Incredients</h2>
-        <p>These are the ingredients you’ll need to make this blueberry muffins recipe at home:</p>
-        <ul>
-         <li><strong>For the muffins</strong>:all-purpose flour, white sugar, baking powder, salt, vegetable oil, an egg, milk, and fresh blueberries </li>
-         <li><strong>For the topping</strong>:white sugar, all-purpose flour, butter, and cinnamon </li>
-        </ul>
-        <br>
-        <h2>How to Make Blueberry Muffin</h2>
-        <p>You will find the full, step-by-step recipe below: </p>
-        <ol>
-         <li>Mix the dry ingredients in a bowl.</li>
-         <li>Mix the wet ingredients in a liquid measuring cup.</li>
-         <li>Add the wet mixture to the dry mixture, then fold in the blueberries.</li>
-         <li>Make the topping. </li>
-         <li>Pour the batter into a prepared muffin tin and sprinkle with the topping. </li>
-         <li>Bake in the preheated oven until the toothpick comes out clean.</li>
-        </ol>
-    </div>
+    <main>
+        <section class="recipe-image">
+            <img src="../images/muffins.jpg" alt="Roasted Eggplant image">
+        </section>
+        <h1 class="heading">
+            Blueberry Muffin Recipe
+        </h1>
+        <p>Light, fluffy, and bursting with juicy blueberries, these muffins are a timeless treat perfect for breakfast or a midday snack. They're easy to bake, store well, and smell incredible fresh from the oven.</p>
+        <section class="preperation">
+            <h2>Preparation time</h2>
+            <ul>
+                <li><span>Total :</span> Approximately 30 minutes</li>
+                <li><span>Preperation : </span> 10 minutes</li>
+                <li><span>Cooking : </span>20 minutes</li>
+            </ul>
+        </section>
+        <section class="ingredients">
+            <h2>Ingredients</h2>
+            <ul>
+                <li>1½ cups all-purpose flour</li>
+                <li>¾ cup granulated sugar</li>
+                <li>½ teaspoon salt</li>
+                <li>2 teaspoons baking powder</li>
+                <li>⅓ cup vegetable oil</li>
+                <li>1 large egg</li>
+                <li>⅓ cup milk</li>
+                <li>1 teaspoon vanilla extract</li>
+                <li>1 cup fresh or frozen blueberries</li>
+                <li>Optional: coarse sugar for topping</li>
+            </ul>
+        </section>
+        <section class="instructions">
+            <h2>Instructions</h2>
+            <ol>
+                <li>
+                    <span>Preheat the oven:</span>
+                    Set to 190°C (375°F) and line a muffin tin with paper liners.
+                </li>
+                <li>
+                    <span>Mix dry ingredients:</span>
+                  n a bowl, whisk together flour, sugar, salt, and baking powder.
+                </li>
+                <li>
+                    <span>Combine wet ingredients:</span>
+                   In another bowl, mix oil, egg, milk, and vanilla.
+                </li>
+                <li>
+                    <span>Combine all</span>
+                    Pour wet mixture into the dry ingredients and stir until just combined.
+                </li>
+                <li>
+                    <span>Add blueberries:</span>
+                   Gently fold in the blueberries without overmixing.
+                </li>
+                <li>
+                    <span>Fill & top:</span>
+                    Fill each muffin cup about ¾ full. Sprinkle tops with coarse sugar if using.
+                </li>
+                <li>
+                    <span>Bake:</span>
+                    Bake for 18–20 minutes or until golden and a toothpick comes out clean.
+                </li>
+                <li>
+                    <span>Cool & serve:</span>
+                  Let cool for a few minutes before enjoying warm or at room temperature.
+                </li>
+            </ol>
+        </section>
+        <section class="nutrition">
+            <h2>Nutrition</h2>
+            <p>The table below shows nutritional values per serving without the additional fillings.</p>
+            <table>
+                <tbody>
+                    <tr>
+                        <th>Calories</th>
+                        <td>210kcal</td>
+                    </tr>
+                    <tr>
+                        <th>Carbs</th>
+                        <td>28g</td>
+                    </tr>
+                    <tr>
+                        <th>Protein</th>
+                        <td>3g</td>
+                    </tr>
+                    <tr>
+                        <th>Fat</th>
+                        <td>9g</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </main>
     <footer>
-        Copyright @ Muhamed Razik 2024
+        By Muhamed Razik 😉 | Redesigned in 2025
     </footer>
 </body>
+
 </html>
