Styled landing page header and navigation

--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
     <header>
         <nav>
             <ul>
-                <li>Odin's recipes</li>
+                <li class="logo">Odin's recipes</li>
                 <li>Home</li>
                 <li>Recipes</li>
                 <li>About</li>
             </ul>
         </nav>
-        <div>
+        <section class="hero">
             <h1>Simple, Delicious, Homemade</h1>
-        </div>
+    </section>
     </header>
+    
     <main>
 
         <section class="recipe-card">
@@ -34,7 +35,7 @@
             </a>
         </section>
         <section class="recipe-card">
-            <a href="./recipes/omlette.html">
+            <a href="./recipes/croissants.html">
                 <div class="recipe-image">
                     <img src="./images/croissants.jpg" alt="simple omplete with garnished image">
                 </div>
@@ -43,7 +44,7 @@
             </a>
         </section>
         <section class="recipe-card">
-            <a href="./recipes/omlette.html">
+            <a href="./recipes/eggplant.html">
                 <div class="recipe-image">
                     <img src="./images/eggplant.webp" alt="simple omplete with garnished image">
                 </div>
@@ -52,7 +53,7 @@
             </a>
         </section>
         <section class="recipe-card">
-            <a href="./recipes/omlette.html">
+            <a href="./recipes/muffins.html">
                 <div class="recipe-image">
                     <img src="./images/muffins.jpg" alt="simple omplete with garnished image">
                 </div>
