Added subtle animation to landing page and recipe page

--- a/index.html
+++ b/index.html
@@ -13,56 +13,60 @@
         <nav>
             <ul>
                 <li class="logo">Odin's recipes</li>
-                <li>Home</li>
-                <li>Recipes</li>
-                <li>About</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#recipes">Recipes</a></li>
+                <li><a href="#About">About</a></li>
             </ul>
         </nav>
         <section class="hero">
             <h1>Simple, Delicious, Homemade</h1>
-    </section>
+        </section>
     </header>
-    
-    <main>
 
-        <section class="recipe-card">
-            <a href="./recipes/omlette.html">
-                <div class="recipe-image">
-                    <img src="./images/image-omelette.jpeg" alt="simple omplete with garnished image">
-                </div>
-                <h2>Simple Omlette Recipe</h2>
-                <p>Tasty And simple omlette to satisfy your small hunger</p>
-            </a>
-        </section>
-        <section class="recipe-card">
-            <a href="./recipes/croissants.html">
-                <div class="recipe-image">
-                    <img src="./images/croissants.jpg" alt="simple omplete with garnished image">
-                </div>
-                <h2>Simple Omlette Recipe</h2>
-                <p>Tasty And simple omlette to satisfy your small hunger</p>
-            </a>
-        </section>
-        <section class="recipe-card">
-            <a href="./recipes/eggplant.html">
-                <div class="recipe-image">
-                    <img src="./images/eggplant.webp" alt="simple omplete with garnished image">
-                </div>
-                <h2>Simple Omlette Recipe</h2>
-                <p>Tasty And simple omlette to satisfy your small hunger</p>
-            </a>
-        </section>
-        <section class="recipe-card">
-            <a href="./recipes/muffins.html">
-                <div class="recipe-image">
-                    <img src="./images/muffins.jpg" alt="simple omplete with garnished image">
-                </div>
-                <h2>Simple Omlette Recipe</h2>
-                <p>Tasty And simple omlette to satisfy your small hunger</p>
-            </a>
+    <main id="recipes" >
+        <h2>Popular Recipes</h2>
+        <section class="recipes-wrapper">
+            <section class="recipe-card">
+                <a href="./recipes/omlette.html">
+                    <div class="recipe-image">
+                        <img src="./images/image-omelette.jpeg" alt="simple omplete with garnished image">
+                    </div>
+                    <h2>Simple Omlette Recipe</h2>
+                    <p>A fluffy, protein-packed classic made with eggs and your favorite fillings.</p>
+                </a>
+            </section>
+            <section class="recipe-card">
+                <a href="./recipes/croissants.html">
+                    <div class="recipe-image">
+                        <img src="./images/croissants.jpg" alt="simple omplete with garnished image">
+                    </div>
+                    <h2>Savory Stuffed Croissant Recipe</h2>
+                    <p>Buttery croissants stuffed with fresh greens, mozzarella, and a pesto twist.</p>
+                </a>
+            </section>
+            <section class="recipe-card">
+                <a href="./recipes/eggplant.html">
+                    <div class="recipe-image">
+                        <img src="./images/eggplant.webp" alt="simple omplete with garnished image">
+                    </div>
+                    <h2>Simple Roasted Eggplant Recipe</h2>
+                    <p>Roasted eggplants filled with a savory, spiced veggie and breadcrumb mix.</p>
+                </a>
+            </section>
+            <section class="recipe-card">
+                <a href="./recipes/muffins.html">
+                    <div class="recipe-image">
+                        <img src="./images/muffins.jpg" alt="simple omplete with garnished image">
+                    </div>
+                    <h2>Blueberry Muffin Recipe</h2>
+                    <p>Soft, fluffy muffins loaded with fresh berries.</p>
+                </a>
+            </section>
         </section>
     </main>
-
+    <footer>
+        By Muhamed Razik 😉 | Redesigned in 2025
+    </footer>
 </body>
 
 </html>
