added responsivness in small screen

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <nav>
             <ul>
                 <li class="logo">Odin's recipes</li>
-                <li><a href="#">Home</a></li>
-                <li><a href="#recipes">Recipes</a></li>
+                <!-- <li><a href="#">Home</a></li> -->
+                <!-- <li><a href="#recipes">Recipes</a></li> -->
                 <li><a href="#About">About</a></li>
             </ul>
         </nav>
@@ -38,7 +38,7 @@
             <section class="recipe-card">
                 <a href="./recipes/croissants.html">
                     <div class="recipe-image">
-                        <img src="./images/croissants.jpg" alt="simple omplete with garnished image">
+                        <img src="./images/croissants.jpg" alt="Stuffed croissant with pesto">
                     </div>
                     <h2>Savory Stuffed Croissant Recipe</h2>
                     <p>Buttery croissants stuffed with fresh greens, mozzarella, and a pesto twist.</p>
@@ -47,7 +47,7 @@
             <section class="recipe-card">
                 <a href="./recipes/eggplant.html">
                     <div class="recipe-image">
-                        <img src="./images/eggplant.webp" alt="simple omplete with garnished image">
+                        <img src="./images/eggplant.webp" alt="roasted eggplants with garnish">
                     </div>
                     <h2>Simple Roasted Eggplant Recipe</h2>
                     <p>Roasted eggplants filled with a savory, spiced veggie and breadcrumb mix.</p>
@@ -56,7 +56,7 @@
             <section class="recipe-card">
                 <a href="./recipes/muffins.html">
                     <div class="recipe-image">
-                        <img src="./images/muffins.jpg" alt="simple omplete with garnished image">
+                        <img src="./images/muffins.jpg" alt="fluffy blueberry muffins">
                     </div>
                     <h2>Blueberry Muffin Recipe</h2>
                     <p>Soft, fluffy muffins loaded with fresh berries.</p>
