created about page and added images for about page and html structure of the page

--- a/index.html
+++ b/index.html
@@ -6,16 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin's Recipe</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/logo.png">
 </head>
 
 <body>
     <header>
         <nav>
             <ul>
-                <li class="logo">Odin's recipes</li>
+                <li class="logo">
+                    <img width="30px" src="./images/logo.png" alt="">
+                    <span>Odin's recipes</span>
+                </li>
                 <!-- <li><a href="#">Home</a></li> -->
                 <!-- <li><a href="#recipes">Recipes</a></li> -->
-                <li><a href="#About">About</a></li>
+                <li><a href="/about.html">About</a></li>
             </ul>
         </nav>
         <section class="hero">
@@ -27,36 +31,36 @@
         <h2>Popular Recipes</h2>
         <section class="recipes-wrapper">
             <section class="recipe-card">
-                <a href="./recipes/omlette.html">
+                <a href="./recipe-pages/omlette.html">
                     <div class="recipe-image">
-                        <img src="./images/image-omelette.jpeg" alt="simple omplete with garnished image">
+                        <img src="./images/recipes/image-omelette.jpeg" alt="simple omplete with garnished image">
                     </div>
                     <h2>Simple Omlette Recipe</h2>
                     <p>A fluffy, protein-packed classic made with eggs and your favorite fillings.</p>
                 </a>
             </section>
             <section class="recipe-card">
-                <a href="./recipes/croissants.html">
+                <a href="./recipe-pages/croissants.html">
                     <div class="recipe-image">
-                        <img src="./images/croissants.jpg" alt="Stuffed croissant with pesto">
+                        <img src="./images/recipes/croissants.jpg" alt="Stuffed croissant with pesto">
                     </div>
                     <h2>Savory Stuffed Croissant Recipe</h2>
                     <p>Buttery croissants stuffed with fresh greens, mozzarella, and a pesto twist.</p>
                 </a>
             </section>
             <section class="recipe-card">
-                <a href="./recipes/eggplant.html">
+                <a href="./recipe-pages/eggplant.html">
                     <div class="recipe-image">
-                        <img src="./images/eggplant.webp" alt="roasted eggplants with garnish">
+                        <img src="./images/recipes/eggplant.webp" alt="roasted eggplants with garnish">
                     </div>
                     <h2>Simple Roasted Eggplant Recipe</h2>
                     <p>Roasted eggplants filled with a savory, spiced veggie and breadcrumb mix.</p>
                 </a>
             </section>
             <section class="recipe-card">
-                <a href="./recipes/muffins.html">
+                <a href="./recipe-pages/muffins.html">
                     <div class="recipe-image">
-                        <img src="./images/muffins.jpg" alt="fluffy blueberry muffins">
+                        <img src="./images/recipes/muffins.jpg" alt="fluffy blueberry muffins">
                     </div>
                     <h2>Blueberry Muffin Recipe</h2>
                     <p>Soft, fluffy muffins loaded with fresh berries.</p>
