--- a/recipe-pages/croissants.html
+++ b/recipe-pages/croissants.html
@@ -10,7 +10,7 @@
 <body>
   <main>
     <section class="recipe-image">
-      <img src="../images/croissants.jpg" alt="Savory stuffed croissant on baking tray" />
+      <img src="../images/recipes/croissants.jpg" alt="Savory stuffed croissant on baking tray" />
     </section>
 
     <h1 class="heading">Savory Stuffed Croissant Recipe</h1>
