--- a/recipe-pages/eggplant.html
+++ b/recipe-pages/eggplant.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <section class="recipe-image">
-            <img src="../images/eggplant.webp" alt="Roasted Eggplant image">
+            <img src="../images/recipes/eggplant.webp" alt="Roasted Eggplant image">
         </section>
         <h1 class="heading">
             Simple Roasted Eggplant Recipe
