--- a/recipe-pages/muffins.html
+++ b/recipe-pages/muffins.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <section class="recipe-image">
-            <img src="../images/muffins.jpg" alt="Roasted Eggplant image">
+            <img src="../images/recipes/muffins.jpg" alt="Blueberry Muffns image">
         </section>
         <h1 class="heading">
             Blueberry Muffin Recipe
