--- a/recipe-pages/omlette.html
+++ b/recipe-pages/omlette.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <section class="recipe-image">
-            <img src="../images/image-omelette.jpeg" alt="simple omplete with garnished image">
+            <img src="../images/recipes/image-omelette.jpeg" alt="simple omplete with garnished image">
         </section>
         <h1 class="heading">
             Simple Omlette Recipe
