refactor: replace hardcoded homepage HTML with dynamic injection from recipes.js

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Odin's Recipe</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/logo.png">
+    <script src="./recipes.js" defer></script>
 </head>
 
 <body>
@@ -30,42 +31,7 @@
     <main id="recipes" >
         <h2>Popular Recipes</h2>
         <section class="recipes-wrapper">
-            <section class="recipe-card">
-                <a href="./recipe-pages/omlette.html">
-                    <div class="recipe-image">
-                        <img src="./images/recipes/image-omelette.jpeg" alt="simple omplete with garnished image">
-                    </div>
-                    <h2>Simple Omlette Recipe</h2>
-                    <p>A fluffy, protein-packed classic made with eggs and your favorite fillings.</p>
-                </a>
-            </section>
-            <section class="recipe-card">
-                <a href="./recipe-pages/croissants.html">
-                    <div class="recipe-image">
-                        <img src="./images/recipes/croissants.jpg" alt="Stuffed croissant with pesto">
-                    </div>
-                    <h2>Savory Stuffed Croissant Recipe</h2>
-                    <p>Buttery croissants stuffed with fresh greens, mozzarella, and a pesto twist.</p>
-                </a>
-            </section>
-            <section class="recipe-card">
-                <a href="./recipe-pages/eggplant.html">
-                    <div class="recipe-image">
-                        <img src="./images/recipes/eggplant.webp" alt="roasted eggplants with garnish">
-                    </div>
-                    <h2>Simple Roasted Eggplant Recipe</h2>
-                    <p>Roasted eggplants filled with a savory, spiced veggie and breadcrumb mix.</p>
-                </a>
-            </section>
-            <section class="recipe-card">
-                <a href="./recipe-pages/muffins.html">
-                    <div class="recipe-image">
-                        <img src="./images/recipes/muffins.jpg" alt="fluffy blueberry muffins">
-                    </div>
-                    <h2>Blueberry Muffin Recipe</h2>
-                    <p>Soft, fluffy muffins loaded with fresh berries.</p>
-                </a>
-            </section>
+            <!-- Data is Injected From recipes.js -->
         </section>
     </main>
     <footer>
