--- a/recipe.html
+++ b/recipe.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Loading</title>
-   <link rel="stylesheet" href="./recipe-pages/recipes.css">
+   <link rel="stylesheet" href="/recipes.css">
     <script src="./recipes.js" defer></script>
 </head>
 
