--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </li>
                 <!-- <li><a href="#">Home</a></li> -->
                 <!-- <li><a href="#recipes">Recipes</a></li> -->
-                <li><a href="/about.html">About</a></li>
+                <li><a href="./about.html">About</a></li>
             </ul>
         </nav>
         <section class="hero">
