--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About</title>
-  <link rel="stylesheet" href="/recipes.css" />
+  <link rel="stylesheet" href="./recipes.css" />
 </head>
 
 <body>
@@ -16,7 +16,7 @@
           <img width="30px" src="./images/logo.png" alt="">
           <span>Odin's recipes</span>
         </li>
-        <li><a href="/">Home</a></li>
+        <li><a href="./">Home</a></li>
       </ul>
     </nav>
   </header>
