fix: fixed main not taking full screen on small  screen in recipe.html and minor layout adjustment

--- a/recipe.html
+++ b/recipe.html
@@ -2,9 +2,10 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Loading</title>
-   <link rel="stylesheet" href="./recipes.css">
+    <link rel="stylesheet" href="./recipes.css" />
     <script src="./recipes.js" defer></script>
 </head>
 
@@ -21,25 +22,25 @@
 
         <section class="preperation">
             <h2>Preparation time</h2>
-        <!-- recipe preperation details injecting from recipe.js -->
+            <!-- recipe preperation details injecting from recipe.js -->
             <ul class="preperation-data"></ul>
         </section>
 
         <section class="ingredients">
             <h2>Ingredients</h2>
-        <!-- recipe ingredients details injecting from recipe.js -->
+            <!-- recipe ingredients details injecting from recipe.js -->
             <ul class="ingredients-data"></ul>
         </section>
 
         <section class="instructions">
             <h2>Instructions</h2>
-        <!-- recipe cooking instructions injecting from recipe.js -->
+            <!-- recipe cooking instructions injecting from recipe.js -->
             <ol class="instructions-data"></ol>
         </section>
 
         <section class="nutrition">
             <h2>Nutrition</h2>
-        <!-- recipe nutritional facts injecting from recipe.js -->
+            <!-- recipe nutritional facts injecting from recipe.js -->
             <p>The table below shows nutritional values per croissant depending on the filling used.</p>
             <table>
                 <tbody class="nutrition-data"></tbody>
