--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                     <img width="30px" src="./images/logo.png" alt="">
                     <span>Odin's recipes</span>
                 </li>
-                <!-- <li><a href="#">Home</a></li> -->
-                <!-- <li><a href="#recipes">Recipes</a></li> -->
+                <li><a href="/">Home</a></li>
                 <li><a href="/about.html">About</a></li>
             </ul>
         </nav>
         <section class="hero">
             <h1>Simple, Delicious, Homemade</h1>
+            <p>Cook with confidence. Share with love. Enjoy every bite.</p>
         </section>
     </header>
 
