fix: fixed navbar link error

--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
           <img width="30px" src="./images/logo.png" alt="">
           <span>Odin's recipes</span>
         </li>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about.html">About</a></li>
+        <li><a href="./">Home</a></li>
+        <li><a href="./about.html">About</a></li>
       </ul>
     </nav>
   </header>
