--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                     <img width="30px" src="./images/logo.png" alt="">
                     <span>Odin's recipes</span>
                 </li>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about.html">About</a></li>
+                <li><a href="./">Home</a></li>
+                <li><a href="./about.html">About</a></li>
             </ul>
         </nav>
         <section class="hero">
