changed Website name to Fork & Fire

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin's Recipe</title>
+    <title>Fork & Fire</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/logo.png">
     <script src="./recipes.js" defer></script>
@@ -16,7 +16,7 @@
             <ul>
                 <li class="logo">
                     <img width="30px" src="./images/logo.png" alt="">
-                    <span>Odin's recipes</span>
+                    <span>Fork & Fire</span>
                 </li>
                 <li><a href="./">Home</a></li>
                 <li><a href="./about.html">About</a></li>
