--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
       <ul>
         <li class="logo">
           <img width="30px" src="./images/logo.png" alt="">
-          <span>Odin's recipes</span>
+          <span>Fork & Fire</span>
         </li>
         <li><a href="./">Home</a></li>
         <li><a href="./about.html">About</a></li>
@@ -25,8 +25,10 @@
     <section id="About">
       <h2>About This Project</h2>
       <p>
-        Odin's Recipe began as a simple assignment from The Odin Project. The goal was to create a website with a
-        homepage that showcases a few recipes and allows users to navigate to individual recipe pages.
+        <strong>Fork & Fire</strong> began as a simple assignment from The Odin Project. Originally titled <em>Odin's
+          Recipe</em>, the site has since been renamed to better reflect its identity and visual direction. The goal was
+        to create a website with a homepage that showcases a few recipes and allows users to navigate to individual
+        recipe pages.
       </p>
 
       <p>
